Add database and get products

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongodb": "^3.5.9",
     "next": "latest",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "uikit": "^3.6.16"
   },
   "license": "MIT"
 }
